Inspect attachments to detect unsupported HEIC format